Change required for sonarcube complaince